Prevented mockup from cropping on smaller screens

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -393,7 +393,7 @@ footer {
 .hidden-wrapper{
   background-color: transparent;
   width: 50vw;
-  height: 80vh;
+  height: 250vh;
   position: absolute;
   overflow: hidden;
   bottom: 0;
